--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,18 @@
         "bitset": "cpp",
         "chrono": "cpp",
         "algorithm": "cpp",
-        "climits": "cpp"
+        "climits": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "initializer_list": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp"
     },
     "python.testing.unittestArgs": [
         "-v",
