Prefic and InfixtoPostfix
Signed-off-by: arunesh-singh <aruneshsingh433@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
         "vector": "cpp",
         "initializer_list": "cpp",
         "regex": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "cmath": "cpp"
     },
     "python.testing.unittestArgs": [
         "-v",
